--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -46,20 +46,24 @@ anyValueIsNa <- is.na(dat$steps) | is.na(dat$date) | is.na(dat$interval)
 totalNas <- sum(anyValueIsNa)
 dat$dayOfWeek <- wday(dat$date)
 meanIntervalByWeekday <- tapply(dat$steps, interaction(dat$interval, dat$dayOfWeek), mean, na.rm = TRUE)
+
 typicalDay <- data.frame(steps = meanIntervalByWeekday, intervalDay = names(meanIntervalByWeekday))
-typicalDay$interval <- as.integer(unlist(strsplit(as.character(typicalDay$intervalDay), ".", fixed=TRUE))[1])
-typicalDay$weekday <- as.integer(unlist(strsplit(as.character(typicalDay$intervalDay), ".", fixed=TRUE)[2]))
+typicalDay <- mutate(typicalDay, intervalDay = as.character(intervalDay))
+
 
 imputeValues <- function(df) {
-   intervalDayInput <- paste(as.character(df$interval), as.character(df$dayOfWeeek), sep =  ".")
-   df$intervalDay = intervalDayInput
-   df <- df %>% left_join(typicalDay, c("intervalDay" = "intervalDay"))
-   df <- rename(df, steps = steps.x, interval = interval.x, imputedValue = steps.y)
-   
-   ixesToUpdate <- which(is.na(df$steps))
-   
-   df$steps[ixesToUpdate] <- df$imputedValue[ixesToUpdate]
-   df
+  intervalDayInput <- paste(as.character(df$interval), as.character(df$dayOfWeek), sep =  ".")
+  df$intervalDay = intervalDayInput
+  print(head(unique(df$intervalDay)))
+  df <- df %>% left_join(typicalDay, c("intervalDay" = "intervalDay"))
+  
+  df <- rename(df, steps = steps.x, imputedValue = steps.y)
+  
+  ixesToUpdate <- which(is.na(df$steps))
+  
+  df$steps[ixesToUpdate] <- df$imputedValue[ixesToUpdate]
+  print(head(df))
+  df
 }
 withImputed <- dat
 withImputed <- imputeValues(withImputed)
